[package]
name = "hash-rings"
version = "0.2.2"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeffrey-xiao/hash-rings-rs"
documentation = "https://docs.rs/hash-rings"
description = """
Implementations of various hash rings.
"""
categories = ["data-structures"]
keywords = ["hash", "data-structures"]
include = ["src/**/*", "Cargo.toml"]

[dependencies]
primal = "0.2"
rand = "0.4"
siphasher = "0.2"
