[package]
name = "hash-rings"
version = "1.0.0"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/jeffrey-xiao/hash-rings-rs"
documentation = "https://docs.rs/hash-rings"
description = """
Implementations of various hash rings.
"""
categories = ["data-structures"]
keywords = ["hash", "data-structures"]
include = ["src/**/*", "Cargo.toml"]
edition = "2018"

[badges]
travis-ci = { repository = "jeffrey-xiao/hash-rings-rs", branch = "master" }
codecov = { repository = "jeffrey-xiao/hash-rings-rs", service = "gitlab" }

[dependencies]
primal = "0.2"
rand = "0.4"
siphasher = "0.2"
